@@ -5,9 +5,7 @@ package was java.net.http, was moved to package jdk.incubator.http (as of EA b14
 // but still built with regular javadoc and available at
 http://download.java.net/java/jdk9/docs/jre/api/incubator/httpclient/spec/index.html
 
-// to build with incubator module, need to explicitly add it
-javac --add-modules jdk.incubator.httpclient Main.java
-
-// to run it, again add the incubator module
+// to run with the incubator module, need to explicitly add it
+javac Main.java
 java --add-modules jdk.incubator.httpclient Main
 
